--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,17 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# Editors
+**/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
