--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "basscss": "^8.1.0",
+    "classnames": "^2.2.6",
+    "flexboxgrid": "^6.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-popper-tooltip": "^4.3.1",
     "sass": "^1.45.1"
   },
   "devDependencies": {
