--- a/package.json
+++ b/package.json
@@ -21,8 +21,17 @@
   "devDependencies": {
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
-    "eslint": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-next": "12.0.7",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "4.5.4"
   }
 }
