--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,19 @@
         "namedComponents": "arrow-function"
       }
     ],
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "@typescript-eslint/no-var-requires": "off",
+    "react/jsx-props-no-spreading": "off"
   },
   "plugins": ["@typescript-eslint"],
   "settings": {
