--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,8 @@
       }
     ],
     "@typescript-eslint/no-var-requires": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "linebreak-style": "off"
   },
   "plugins": ["@typescript-eslint"],
   "settings": {
