--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "basscss": "^8.1.0",
     "classnames": "^2.2.6",
     "flexboxgrid": "^6.3.1",
@@ -18,7 +19,8 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-popper-tooltip": "^4.3.1",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "stellar-sdk": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.1",
