--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-popper-tooltip": "^4.3.1",
     "sass": "^1.45.1",
-    "stellar-sdk": "^9.1.0"
+    "stellar-sdk": "^9.1.0",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.1",
