--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "basscss": "^8.1.0",
     "classnames": "^2.2.6",
     "flexboxgrid": "^6.3.1",
+    "luxon": "^2.3.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
